# p2piroh

./: .gitignore  Cargo.toml  LICENSE  README.md
app/: Cargo.toml
app/src/: main.rs
static/: index.html
static/pkg/: app.d.ts  app.js  app_bg.wasm  app_bg.wasm.d.ts  package.json
wasm/: Cargo.toml
wasm/src/: lib.rs
